fixed overflow

--- a/css/style.css
+++ b/css/style.css
@@ -21,16 +21,19 @@
 }
 
 body {
+  width: 100vw;
   background-color: #efeae3;
   font-family: neuehaasmedium, system-ui;
   font-size: calc(0.5357142857142858vw + 0.5178571428571429em);
   overflow-x: hidden;
 }
 
+
 .container {
   width: 100%;
   margin: auto;
   padding: 0 2em;
+  overflow-x: hidden;
   /* border: 1px solid red; */
   /* height: 200px; */
 }
@@ -147,6 +150,7 @@ body {
   top: 20em;
   right: 0;
   z-index: 2;
+  overflow: hidden;
 }
 
 .hero-shape-1 {
@@ -249,6 +253,7 @@ body {
   /* border: 2px solid red;S */
   /* height: 200px; */
   margin-top: 6.25em;
+  overflow: hidden;
 }
 
 .kp-scroller-inner {
@@ -520,16 +525,40 @@ body {
   overflow: hidden;
   border-radius: 1rem;
   margin-bottom: 1.75rem;
+  
+  /* border: 1px solid red; */
 }
 
 .featured-link-img-wrapper > * {
   width: 100%;
   height: 100% ;
+  aspect-ratio: 4/5;
+  display: block;
   object-fit: cover;
   object-position: center;
 }
 
 
+.hero-shapes-wrapper {
+  overflow: hidden;
+  /* border: 2px solid blue; */
+  width: 100vw;
+ min-height: 200vh;
+ top: 0;
+ left: 0;
+ right: 0;
+ 
+ position: absolute;
+}
+
+.blob-wrapper {
+  /* border: 2px solid blue; */
+  height: 200vh;
+  position: absolute;
+  width: 100vw;
+  top: 0;
+  overflow-x: clip;
+}
 
 @media screen  and (max-width : 992px){
   body {
@@ -686,11 +715,11 @@ body {
   }
 
   .hero-video {
-    min-height: 32rem;
+    min-height: 28rem;
   }
 
   .hero-video video {
-    min-height: 32rem;
+    min-height: 28rem;
   }
 
   .hero-shapes {
